<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.tatiana.firsttest.MainActivity3"
    tools:showIn="@layout/app_bar_main3">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/mainAct3PersInfo"
        android:id="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:src="@drawable/owlavatar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/imageViewAvatar"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Man"
        android:id="@+id/radioBtnMan"
        android:checked="true"
        android:enabled="true"
        android:focusableInTouchMode="false"
        android:focusable="false"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="210dp"
        android:layout_marginLeft="90dp" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Woman"
        android:id="@+id/radioBtnWoman"
        android:checked="false"
        android:enabled="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="210dp"
        android:layout_marginLeft="170dp" />

    <ImageButton
        android:src="@drawable/pencil"
        android:background="@color/colorPencil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageBtnPencil"
        android:layout_alignBottom="@+id/imageViewAvatar"
        android:layout_toRightOf="@+id/imageViewAvatar"
        android:layout_toEndOf="@+id/imageViewAvatar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/mainAct3Email"
        android:id="@+id/tvUserEmail"
        android:textSize="18dp"
        android:layout_below="@+id/textView6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="12dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/mainAct3Login"
        android:id="@+id/tvUserLogin"
        android:textSize="18dp"
        android:layout_below="@+id/radioBtnMan"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="12dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Change password"
        android:id="@+id/btnCngPass"
        android:enabled="true"
        android:clickable="true"
        android:textSize="16dp"
        android:singleLine="false"
        android:focusable="false"
        android:elegantTextHeight="false"
        android:background="@color/BtnSignIn"
        android:textColor="@color/BtnSignInText"
        android:layout_below="@+id/tvUserBalance"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:layout_marginTop="25dp"
        android:layout_alignRight="@+id/textView2"
        android:layout_alignEnd="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/mainAct3FirstName"
        android:id="@+id/tvUserFirstName"
        android:textSize="18dp"
        android:layout_below="@+id/textView7"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="155dp"
        android:layout_marginTop="12dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/mainAct3SecondName"
        android:id="@+id/tvUserSecondName"
        android:textSize="18dp"
        android:layout_below="@+id/textView8"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="180dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/mainAct3Balance"
        android:id="@+id/tvUserBalance"
        android:textSize="20dp"
        android:layout_below="@+id/textView9"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/mainAct3LoginTV"
        android:id="@+id/textView6"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_below="@+id/radioBtnMan"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/mainAct3EmailTV"
        android:id="@+id/textView7"
        android:layout_below="@+id/textView6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="40dp"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/mainAct3FirstNameTV"
        android:id="@+id/textView8"
        android:layout_below="@+id/textView7"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/mainAct3SecondNameTV"
        android:id="@+id/textView9"
        android:layout_below="@+id/textView8"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="40dp"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/mainAct3BalanceSum"
        android:id="@+id/tvUserBalanceSum"
        android:textSize="18dp"
        android:layout_below="@+id/textView9"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="135dp"
        android:layout_marginTop="12dp" />

</RelativeLayout>
